code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__branch_picker_new_worktree_fullscreen.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Project branches and worktrees ───────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search branches                                                    │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Worktrees                                                              │             
            │> New worktree  ·  Detached · new session                                │             
            │  New branch  ·  ash/ branch · new session                               │             
            │  Project branches                                                       │             
            │  main  ·  Current                                                       │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  w New worktree · b New branch · / search · Esc close                   │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
