code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__branch_picker_worktree_name_fullscreen.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── New branch ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Create branch                                                          │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ ash/topic                                                          │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  New session on this branch. Project branch unchanged.                  │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Enter to create  ·  Esc to back                                        │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
