code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__config_expanded_description.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Config ───────────────────────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│   General    Providers    Issues                                        │          │  
  │  ▝▜████▛│                                                                         │          │  
  │    ▝  ▘ │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ Search configuration                                               │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  Vim mode                                                         off   │          │  
  │         │  Show tips                                                         on   │          │  
  │         │> Memory diagnostics                                               off - │          │  
  │         │    Continuously collect bounded memory evidence                         │          │  
  ╰─────────│  Automatic updates                                             Latest   │──────────╯  
            │  Show Git changes as diff                                         off + │             
            │  Language                                                     English   │             
            │  Status bar style                                              Simple   │             
            │  Key hint style                                              Contrast   │             
            │  Screen mode                                               fullscreen   │             
            │  Memories                                                         off + │             
            │  Automatic Git fetch                                              Off + │             
            │  Git fetch interval                                              180s   │             
            │  Git branch marker                                          Powerline   │             
            │  3 more below                                                           │ Esc return  
  ──────────│  Enter change · r reset · ←/→ details · Tab tabs · / search · Esc close │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
