code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__home_after_modal_closed.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ⏸ ask permissions on                                                                              
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > preserved draft                                                                                 
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter send  ·  / commands
